@@ -1,5 +1,8 @@
-2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also 
-           updated to describe chages in keyword parameters. 
+2008-12-20 fix the hatch bug in the pdf backend. minor update
+           in docs and  example - JJL
+
+2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also
+           updated to describe chages in keyword parameters.
            Issue a warning if old keyword parameters are used. - JJL
 
 =======================================================================
